# NovaForge-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Shaders.cfg  build project.bat  clang-format.cmake  generate solution.bat
Assets/: Test Asset.txt
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: AssetBuildJob.h  AssetCache.h  AssetDatabaseMigration.h  AssetEnums.h  AssetManager.h  AssetMetadata.h  AssetProcessor.h  AssetProcessorFingerprint.h  Engine.h  ErrorEnums.h  EventAxes.h  Export.h  FileFingerprint.h  FolderScanner.h  GamepadManager.h  IAssetTester.h  InputBinding.h  InputContext.h  InputEvent.h  InputManager.h  InputSource.h  InputSourceEnums.h  ProductAsset.h  Singleton.h  SourceAsset.h
Engine/src/: AssetBuildJob.cpp  AssetCache.cpp  AssetDatabaseMigration.cpp  AssetManager.cpp  AssetMetadata.cpp  AssetProcessorFingerprint.cpp  Engine.cpp  EventAxes.cpp  FolderScanner.cpp  GamepadManager.cpp  InputBinding.cpp  InputContext.cpp  InputManager.cpp  InputSource.cpp  Singleton.cpp  SourceAsset.cpp
GameObjectBase/: Attributes.cs  CollisionManager.cs  Component.cs  GameObject.cs  GameObjectBase.csproj  GameObjectBase.sln  GameObjectsExtensions.cs  InputManager.cs  InternalCalls.cs  KeyCode.cs  MaterialMap.cs  MathTypes.cs  ObjectId.cs  ObjectsHolder.cs  Root.cs  SystemRoot.cs  Test.cs  packages.config
GameObjectBase/AI/Agents/: AiController.cs
GameObjectBase/AI/Director/Groups/: Group.cs
GameObjectBase/AI/Memory/: Blackboard.cs
GameObjectBase/AI/Other/: AiLogger.cs
GameObjectBase/GameComponents/: AIComponent.cs  AgentController.cs  CameraComponent.cs  CharacterState.cs  ColliderComponent.cs  HealthComponent.cs  MeshComponent.cs  MovementController.cs  PhysicsComponent.cs  TransformComponent.cs
GameObjectBase/Properties/: AssemblyInfo.cs
GameObjectBase/UI/: FieldInspector.cs  NovaEditorView.cs  NovaRenderer.cs  SceneTreeView.cs
GameObjectBase/UI/Utility/: DockingUtility.cs  ImGuiThemesHelper.cs  ImGuiUtility.cs
GameObjectsBase/: Component.cs  GameObject.cs  GameObjectsBase.sln  ObjectId.cs  SystemRoot.cs
Sandbox/: CMakeLists.txt
Sandbox/ScriptingSystem/: ScriptEngine.cpp  ScriptEngine.h
Sandbox/src/: Application.cpp  Application.h  ApplicationUI.cpp  ApplicationUI.h  CmdLine.h  Display.cpp  Display.hpp  DockingDetails.cpp  DockingDetails.h  DockingParams.cpp  DockingParams.h  GameScene.cpp  GameScene.h  IRenderPass.cpp  IRenderPass.h  ISystem.h  ImguiThemes.cpp  ImguiThemes.h  InputDevice.cpp  InputDevice.hpp  MainRenderPass.cpp  MainRenderPass.h  MeshRegistry.cpp  MeshRegistry.hpp  ModelLoader.cpp  ModelLoader.h  NRIContext.h  Packing.cpp  Packing.h  PassCompositor.cpp  PassCompositor.h  PhysEngine.cpp  PhysEngine.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsUtility.cpp  PhysicsUtility.h  RenderSystem.cpp  RenderSystem.h  RunnerCallbacks.cpp  (+16 more)
Sandbox/src/fmath/: f16.hpp
ScriptingSandbox/: CSharpTesting.cs  ScriptingSandbox.csproj
ScriptingSandbox/Properties/: AssemblyInfo.cs
_Data/Shaders/: StaticUI.fs.hlsl  Triangle.fs.hlsl  Triangle.vs.hlsl  UI.fs.hlsl
